bug: emoji not showing on search

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,15 @@
   text-align: center;
 }
 
-input{
-  padding: 1rem;
-  width:80%;
+input {
+  display: block;
+  width: 60%;
+  height: 2rem;
+  margin: 20px auto 60px auto;
+}
+
+li {
+  list-style: none;
+  display: inline-block;
+  padding: 5px;
 }
